force-app/main/default/objects/Lead/fields/Capital_City_c__c.field-meta.xml
<CustomField>
    <fullName>Capital_City_c__c</fullName>
    <label>Capital City</label>
    <length>225</length>
    <type>Text</type>
</CustomField>