force-app/main/default/objects/Lead/fields/Country_Alpha2Code_c__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha2Code_c__c</fullName>
    <label>Country Alpha2Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>