force-app/main/default/objects/Lead/fields/Country_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Country_Name_c__c</fullName>
    <label>Country Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>