force-app/main/default/objects/Lead/validationRules/Cant_change_owner_conditions.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_owner_conditions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    OR(
        ISBLANK(TEXT(LeadSource)),
        AND(
            NOT($Profile.Name = &apos;System Administrator&apos;),
            ISBLANK(Country_Name_c__c)
        ),
        AND(
            NOT($Profile.Name = &apos;System Administrator&apos;),
            NOT($Profile.Name = &apos;Contract Manager&apos;),
            ISBLANK(NumberOfEmployees)
        )
    )
)</errorConditionFormula>
    <errorMessage>You cannot change the owner unless Country, Lead Source and No. of Employees are filled in</errorMessage>
</ValidationRule>